# ch32v003-semihosting

./: LICENSE.txt  README.md  cross.ini  flash.cfg  meson.build
User/: ch32v00x_it.h  main.c  semihosting.c  semihosting.h  system_ch32v00x.c
